# webprobe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LLM_WEBPROBE_PROMPT.txt  MCP_USAGE.md  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: browser_manager.rs  browser_manager_test.rs  browser_pool.rs  commands_test.rs  daemon_test.rs  errors.rs  lib.rs  main.rs  mcp_server.rs  profile.rs  tab_manager.rs  tab_manager_test.rs  types.rs  types_test.rs  webdriver.rs  webdriver_manager.rs  webdriver_manager_test.rs
src/commands/: analyze.rs  batch.rs  click.rs  compare.rs  daemon.rs  detect.rs  diagnose.rs  eval.rs  find_text.rs  iframe.rs  inspect.rs  layout.rs  mod.rs  profile.rs  screenshot.rs  scroll.rs  session.rs  status.rs  tab.rs  type.rs  update.rs  utils.rs  validate.rs  version.rs  wait_idle.rs  wait_navigation.rs
src/daemon/: mod.rs
tests/: batch_test.rs  commands_advanced_test.rs  commands_integration_test.rs  daemon_architecture_test.rs  daemon_guard_example_test.rs  daemon_integration_test.rs  daemon_simple_test.rs  default_tab_test.rs  error_handling_test.rs  integration_test.rs  oneshot_test.rs  profile_test.rs  server_integration_test.rs  simple_viewport_test.rs  test_server.rs  test_server_app.rs  test_utils.rs  viewport_test.rs
tests/common/: daemon.rs  mod.rs  test_guard.rs
