[package]
name = "webprobe"
version = "1.0.0"
edition = "2024"
authors = ["Karthik Kolli <karthik@karthikkolli.com>"]
description = "CLI tool for LLMs to inspect web applications programmatically"
license = "MIT"
repository = "https://github.com/karthikkolli/webprobe"
homepage = "https://github.com/karthikkolli/webprobe"
readme = "README.md"
keywords = ["webdriver", "browser", "automation", "llm", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[package.metadata.deb]
maintainer = "Karthik Kolli <karthik@karthikkolli.com>"
copyright = "2025, Karthik Kolli <karthik@karthikkolli.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
webprobe is a CLI tool that enables LLMs and automated tools to understand \
web page layouts by providing precise measurements, positions, and semantic \
information about elements. It supports multiple browsers (Firefox, Chrome) \
via WebDriver protocol."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/webprobe", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/webprobe/README", "644"],
    ["LICENSE", "usr/share/doc/webprobe/LICENSE", "644"],
]

[package.metadata.rpm]
package = "webprobe"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
webprobe = { path = "/usr/bin/webprobe" }

[features]
default = []
mcp = ["rmcp", "rmcp-macros", "async-trait", "schemars"]

[dependencies]
# WebDriver client for browser automation
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
# Chrome DevTools Protocol
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], default-features = false }
# Async runtime
tokio = { version = "1", features = ["full"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }
# For temporary directories
tempfile = "3.8"
# URL parsing
url = "2.5"
# HTTP client for WebDriver status checks
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.6", features = ["v4"] }
# Home directory detection
dirs = "5.0"
# Global static instances
lazy_static = "1.4"
# IPC for daemon communication
interprocess = "2.0"
# MCP (Model Context Protocol) support  
rmcp = { version = "0.5", features = ["server", "macros"], optional = true }
rmcp-macros = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }
schemars = { version = "1.0", optional = true }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "fs"] }
daemonize = "0.5"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
# Snapshot testing
insta = { version = "1.34", features = ["json"] }
# Test web server
axum = "0.7"
tower = "0.4"
# For async tests
tokio-test = "0.4"
