[package]
name = "webprobe"
version = "0.2.0"
edition = "2024"
authors = ["Karthik Kolli <karthik@karthikkolli.com>"]
description = "CLI tool for LLMs to inspect web applications programmatically"
license = "MIT"
repository = "https://github.com/karthikkolli/webprobe"
homepage = "https://github.com/karthikkolli/webprobe"
readme = "README.md"
keywords = ["webdriver", "browser", "automation", "llm", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[package.metadata.deb]
maintainer = "Karthik Kolli <karthik@karthikkolli.com>"
copyright = "2025, Karthik Kolli <karthik@karthikkolli.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
webprobe is a CLI tool that enables LLMs and automated tools to understand \
web page layouts by providing precise measurements, positions, and semantic \
information about elements. It supports multiple browsers (Firefox, Chrome) \
via WebDriver protocol."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/webprobe", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/webprobe/README", "644"],
    ["LICENSE", "usr/share/doc/webprobe/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/webprobe", dest = "/usr/bin/webprobe", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/webprobe/LICENSE", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/webprobe/README.md", mode = "644" },
]

[[bin]]
name = "webprobe"
path = "src/main.rs"

[[bin]]
name = "test-server"
path = "src/bin/test_server.rs"
required-features = ["test-server"]

[features]
default = []
test-server = ["axum", "tower-http", "chrono"]

[dependencies]
# WebDriver client for browser automation
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
# Chrome DevTools Protocol
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], default-features = false }
# Async runtime
tokio = { version = "1", features = ["full"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }
# For temporary directories
tempfile = "3.8"
# URL parsing
url = "2.5"
# HTTP client for WebDriver status checks
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.6", features = ["v4"] }
# Home directory detection
dirs = "5.0"
# Global static instances
lazy_static = "1.4"
# Random number generation for auth tokens
rand = "0.8"
# IPC for daemon communication
interprocess = "2.0"
# Lock-free concurrent HashMap for per-tab locking
dashmap = "6.1"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "fs"] }
daemonize = "0.5"

# Test server dependencies (also used by test-server binary)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
# Snapshot testing
insta = { version = "1.34", features = ["json"] }
# Test web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
# For async tests
tokio-test = "0.4"
# For test timestamps
chrono = "0.4"
# For test utilities
lazy_static = "1.4"
# For global test synchronization
once_cell = "1.19"
# For serial test execution
serial_test = "3.0"
# Synchronous HTTP client for test server startup
ureq = "2.9"
